--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,12 @@ dependencies:
   responsive_builder: ^0.1.5
   syncfusion_flutter_charts: ^18.2.45  
   url_launcher_web: ^0.1.2
-
+  firebase_auth: ^0.16.1
+  firebase: ^7.3.0
+  firebase_database: ^3.1.6
+  cloud_firestore: ^0.13.7
+  provider: ^4.3.1
+  flutter_spinkit: "^4.1.2"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
