--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   provider: ^4.3.1
   flutter_spinkit: "^4.1.2"
   url_launcher: ^5.5.0
-
+  filter_list: ^0.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
