--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   url_launcher: ^5.5.0
   filter_list: ^0.0.1
+  firebase_storage: ^3.1.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
